--- a/webapp/views/cadastro.html
+++ b/webapp/views/cadastro.html
@@ -33,6 +33,8 @@
             </form>
         </div>
     </div>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/cadastro.js"></script>
 </body>
 
 </html>
