--- a/webapp/views/home.html
+++ b/webapp/views/home.html
@@ -51,7 +51,8 @@
     {{ template "rodape" }}
 
     {{ template "scripts" }}
-    
+
+    <script src="/assets/js/publicacoes.js"></script>
 </body>
 
 </html>
