--- a/webapp/views/cadastro.html
+++ b/webapp/views/cadastro.html
@@ -26,14 +26,15 @@
                     <input type="password" name="senha" id="senha" placeholder="Digite a sua senha" required="required">
                 </div>
                 <div>
-                    <input type="password" name="confirmar-senha" id="confirmar-senha" placeholder="Confirme a sua senha" required="required">
+                    <input type="password" name="confirmar-senha" id="confirmar-senha" placeholder="Confirme a sua senha"
+                        required="required">
                 </div>
                 <a href="/login"> Clique aqui para fazer o login </a>
                 <button type="submit" class="btn-devbook">Cadastrar</button>
             </form>
         </div>
     </div>
-    <script src="/assets/js/jquery.min.js"></script>
+    {{ template "scripts" }}
     <script src="/assets/js/cadastro.js"></script>
 </body>
 
