--- a/webapp/views/templates/atualizar-publicacao.html
+++ b/webapp/views/templates/atualizar-publicacao.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row mt-4">
             <div class="col-12">
-                <h3>Editar Publicação</h3>
+                <h3>Atualizar Publicação</h3>
                 <div class="form-group">
                     <label for="titulo">Título</label>
                     <input type="text" class="form-control" id="titulo" name="titulo"
@@ -24,7 +24,7 @@
                     <textarea class="form-control" name="conteudo" id="conteudo" placeholder="Escreva o conteúdo da sua publicação">{{ .Conteudo }}</textarea>
                 </div>
                 <button class="btn btn-info" id="atualizar-publicacao" data-publicacao-id="{{ .ID }}">
-                    Atualizar Publicação
+                    Salvar Alterações
                 </button>
             </div>
         </div>
@@ -32,6 +32,8 @@
 
     {{ template "rodape" }}
     {{ template "scripts" }}
+    
+    <script src="/assets/js/publicacoes.js"></script>
     
 </body>
 
