--- a/webapp/views/templates/publicacoes.html
+++ b/webapp/views/templates/publicacoes.html
@@ -1,5 +1,5 @@
 {{ define "curtidas" }}
-<i class="fa-solid fa-heart curtir-publicacao"></i>
+<i class="fa-solid fa-heart curtir-publicacao" style="cursor: pointer;"></i>
 <span> {{ .Curtidas }} </span>
 {{ end }}
 
@@ -10,9 +10,7 @@
 {{ end }}
 
 {{ define "deletar" }}
-<a href="/deletar" style="text-decoration: none;">
-    <i class="fas fa-trash text-danger"></i>
-</a>
+    <i class="fas fa-trash text-danger deletar-publicacao" style="cursor: pointer;"></i>
 {{ end }}
 
 {{ define "cabecalho-publicacao" }}
