Busca de Usuários

--- a/webapp/views/templates/cabecalho.html
+++ b/webapp/views/templates/cabecalho.html
@@ -16,7 +16,7 @@
             </li>
 
             <li class="nav-item">
-                <form class="form-inline my-2 my-lg-0" action="/buscar" method="GET">
+                <form class="form-inline my-2 my-lg-0" action="/buscar-usuarios" method="GET">
                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar Usuários" id="usuario"
                         name="usuario" required>
                 </form>
