--- a/webapp/views/usuario.html
+++ b/webapp/views/usuario.html
@@ -29,12 +29,12 @@
                         </h6>
 
                         <p class="card-text">
-                            <a href="#">
+                            <a href="#" data-toggle="modal" data-target="#modal-seguidores">
                                 Seguidores: {{ len .Usuario.Seguidores }}
                             </a>
                         </p>
                         <p class="card-text">
-                            <a href="#">
+                            <a href="#" data-toggle="modal" data-target="#modal-seguindo">
                                 Seguindo: {{ len .Usuario.Seguindo }}
                             </a>
                         </p>
@@ -80,6 +80,9 @@
         </div>
     </div>
 
+
+    {{ template "modal-seguidores" .Usuario }}
+    {{ template "modal-seguindo" .Usuario }}
     {{ template "rodape" }}
     {{ template "scripts" }}
 
