--- a/webapp/views/perfil.html
+++ b/webapp/views/perfil.html
@@ -70,6 +70,13 @@
                 </div>
             </div>
         </div>
+
+        <a id="deletar-usuario" class="card-link">
+            <button class="btn btn-info">
+                Excluir conta permanentemente
+            </button>
+        </a>
+
     </div>
 
 
@@ -80,6 +87,7 @@
 
     {{ template "scripts" }}
     <script src="/assets/js/publicacoes.js"></script>
+    <script src="/assets/js/usuario.js"></script>
 </body>
 
 </html>
